<resources>
    <string name="app_name">Logind</string>

    <string name="txtTitulo">BIEN BENIDOS AL SISTEMA</string>
    <string name="btnLogind">Next</string>
    <string name="btnSing_In">Sign In</string>
    <string name="txtRegistrar">Registrate A qui!!</string>
    <string name="edtCorreo">Ingrese su correo </string>
    <string name="erro_field_required">error !! ingrese su correo</string>
    <string name="error_imeil_invalido">este emeil no es correcto</string>

    <string name="title_activity_acitvity__menu_principal">Acitvity_MenuPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Todo Mtto fibra Optica</string>
    <string name="nav_header_subtitle">mirito.casi@hotmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_empalme">Empalmes</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>


    <string name="edtPassword">Ingrese Contraseña</string>
    <string name="password_invalido">la contraseña debe ser >= 6 carapteres</string>
    <string name="netWorks">Comprueba tu conexion a internet</string>
    <string name="erro_field_requiredpasword">ingrese contrseña</string>
    <string name="credencial_invalido">contraseña invalida</string>

    <string name="edtNombreU">Nombre</string>
    <string name="edtApellidoU">Apellidos</string>
    <string name="edtCrearCorreoU">Crear su correo</string>
    <string name="edtNumTelefonoU">Numero de Celular</string>
    <string name="btnRegistU">Registrarse</string>

    <string name="nuevoempalme">Nuevo Empalme</string>
    <string name="titulo">Registrar empalmes</string>
    <string name="nuevo_datos_empalme">Nuevo empalme</string>
    <string name="guardar">Guardar Empalme</string>

    <string name="cancel">cancelar</string>

    <string name="txtDetalleEmpalmes">DETALLES</string>
    <string name="txtobservacion">Detalle u Observacion</string>
    <string name="txtdistancia">Distancia punto \"A\"</string>
    <string name="txtnumposte">Numero de Poste</string>
    <string name="txttramo">Tramo</string>
    <string name="txtempalme">Nombre Empalme</string>
    <string name="btnActualizar">Actualizar</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="txtId_empalme"># Identificador del Empalme</string>


</resources>
